# mini-kernel-lib

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: CMakeLists.txt  conv_bench.cpp  gemm_bench.cpp  reduce_bench.cpp
docs/: design.md
include/mklib/: conv.h  export.h  gemm.h  handle.h  mklib.h  reduction.h  status.h  tensor_desc.h
src/: CMakeLists.txt
src/api/: conv.cc  gemm.cc  handle.cc  reduction.cc  status.cc  tensor_desc.cc
src/backend/: backend.h
src/backend/cuda/: cuda_conv.cc  cuda_gemm.cc  cuda_reduction.cc
src/planner/: dispatch_key.cc  dispatch_key.h
src/registry/: kernel_registry.cc  kernel_registry.h
src/runtime/: handle_state.h  tensor_desc_state.h  tensor_utils.h
tests/: CMakeLists.txt  conv_test.cpp  gemm_test.cpp  reduction_test.cpp  smoke_test.cpp
